Bug 225604 Dreftool should not follow symlinks (by default) r=dwitte